iss#238 Track Service: bulk update tags: tests for updateSelectedTags